fixed width on mobile project cards

--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -7,6 +7,10 @@
     overflow: hidden;
 
     .projectCardImg {
+        @media(min-width:767px) and (max-width: 992px) {
+            width: 50%;
+        }
+
          img {
             width: 100%;
          }
@@ -28,7 +32,7 @@
         }
 
         @media(min-width:767px) and (max-width: 992px) {
-            width: 100%;
+            width: 50%;
             display: flex;
             flex-direction: column;
             justify-content: center;
